Compile KtScripts via embedded compiler